# baxter_data_acquisition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  baxter_daq.rosinstall  package.xml  setup.py
data/setup/new/: README.md  configurations.txt  configurations2.txt  durations2.txt  note.md  poses.txt  poses2.txt
data/setup/original(baxter_rpc)/: README.md  durations2.txt  note.md  poses.txt  poses2.txt
launch/: baxter.launch  empty_world.launch  exp_anomaly.launch  exp_collision.launch  exp_goal.launch  kinect.launch  recorder.launch  simulation.launch  validate_movements.launch
nodes/: bag_server.py  camera_server.py  flash_server.py  hello_world_client.py  hello_world_server.py  joint_server.py  kinect_server.py  listener.py  senz_server.py  talker.py  trigger_server.py
scripts/: anomaly.py  collision.py  goal.py  handshake.py  record_kinect_images.py  record_workspace.py  validate_movements.py  visualize_workspace.py
src/baxter_data_acquisition/: __init__.py  face.py  jp_anomaly.py  jp_collision.py  jp_goal.py  jp_handshake.py  misc.py  sampler.py  settings.py  suppression.py  workspace.py
src/control/: __init__.py  hdl.py  hdl_config.py  hdl_duration.py  hdl_pose.py  ipl.py  ipl_bb.py  pid.py
src/experiments/: __init__.py  anomaly.py  collision.py  goal.py  handshake.py  jp_anomaly.py
src/recorder/: __init__.py  bag_recorder.py  camera_recorder.py  depth_recorder.py  depth_sensor_recorder.py  flash_recorder.py  joint_recorder.py  kinect_recorder.py  queue_recorder.py  queue_subscriber.py  recorder_client.py  recorder_server.py  senz_recorder.py
srv/: JointTrigger.srv  Trigger.srv
urdf/: baxter.urdf.xacro
