<?xml version="1.0"?>
<package>
  <name>baxter_data_acquisition</name>
  <version>0.0.0</version>
  <description>
    Data acquisition with the baxter research robot for robot anomaly 
    detection.
  </description>

  <maintainer email="ludersdorfer@fortiss.org">Marvin Ludersdorfer</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/BRML/baxter_data_acquisition.git</url>
  <author email="ludersdorfer@fortiss.org">Marvin Ludersdorfer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>h5py</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msg</build_depend>

  
  <run_depend>rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>h5py</run_depend>
  <run_depend>numpy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msg</run_depend>
</package>
